--- a/main/templates/product-details.html
+++ b/main/templates/product-details.html
@@ -8,8 +8,11 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="left-sidebar">
-						</div><!--/category-products-->
-
+		</div><!--/category-products-->
+			<div class="shipping text-center"><!--shipping-->
+				<p>{{ govazd.name }}</p>
+				<img src="{{ govazd.img.url }}" alt="" width="220" />
+			</div><!--/shipping-->
           </div>
         </div>
         <br>
