--- a/main/templates/filter.html
+++ b/main/templates/filter.html
@@ -23,9 +23,9 @@
 							{% endfor %}
 						</div>
 						<div class="shipping text-center"><!--shipping-->
-							<img src="images/home/shipping.jpg" alt="" />
+							<p>{{ govazd.name }}</p>
+							<img src="{{ govazd.img.url }}" alt="" width="220" />
 						</div><!--/shipping-->
-						
 					</div>
 				</div>
 				
