--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -34,7 +34,7 @@
 								</div>
 								<div class="col-sm-6">
 									<img src="{{ i.main_icon.url }}" class="girl img-responsive" alt="" width="280" height="110"/>
-									<img src="images/home/pricing.png"  class="pricing" alt="" />
+<!-- 									<img src="images/home/pricing.png"  class="pricing" alt="" /> -->
 
 								</div>
 							</div>	
