--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 	{% block content %}
 	{% load static %}
+	ljkblkjb
 	<section id="slider"><!--slider-->
 		<div class="container">
 			<div class="row">
