--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -76,7 +76,7 @@
                                 <li><a href="{% url 'contact-us' %}"><i class="fa fa-book"></i>Կապ մեզ հետ</a></li>
 								<li><a href="{% url 'logout' %}"><i></i>{{ user }}-Դուրս գալ</a></li>
                                 {% if user.is_staff %}
-                                <li><a href="{% url 'add_products' %}">Ավելացնել</a></li>
+                                <li><a href="{% url 'add_products' %}">Ավելkjvhkjv</a></li>
                                 {% endif %}
                                 {% else %}
                                 <li><a href="{% url 'about-us' %}"><i class="fa fa-info"></i>Մեր մասին</a></li>
